fix: center align modal

--- a/src/styles/components/_signupForm.scss
+++ b/src/styles/components/_signupForm.scss
@@ -62,7 +62,7 @@ a.ml-2 {
   max-width: 40rem !important;
   position: relative;
   z-index: 999;
-  padding: 3em 2em;
+  padding: 3em 2em 0 2em;
   background: rgba(255, 255, 255, 0.04);
   -webkit-box-shadow: -1px 4px 28px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 4px 28px 0px rgba(0, 0, 0, 0.75);
@@ -70,7 +70,7 @@ a.ml-2 {
 }
 
 .fade.modal.show {
-  display: flex;
+  display: flex!important;
   align-items: center;
   justify-content: center;
 }
